feat: Добавлен патчинг нативных методов для Java